--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
  <img src="https://i.postimg.cc/d0kC9bJL/1-5.jpg" alt="pikashow.jpg" style="max-width: 100%; height: auto;">
 </div>
 
-<h2> <a href="https://geometrydashapps.pages.dev/">Guía Completa para Descargar Geometry Dash 2.2 APK</a></h2>
+<h2> <a href="https://pikashowhub.netlify.app/">Enhancing User Experience: The Customization Features of Pikashow</a></h2>
 
 <h2 class="mb-2 mt-6 text-lg first:mt-3">Diverse Genre Selection</h2>
 <p>One of the standout features of Pikashow is its extensive collection of movies and TV shows spanning a wide range of genres. From action-packed thrillers to heartwarming romantic comedies, the platform caters to diverse tastes and preferences. Users can easily navigate through categories such as:</p>
