--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="description" content=" Discover what sets Pikashow's content apart from other popular streaming platforms like Netflix and Amazon Prime Video.">
  <meta name="robots" content="index,follow"> 
 <link rel="canonical" href="https://itsharryluis.github.io/pika/">
+ <meta name="google-site-verification" content="gtzzd4SVJ5JQJttVsEzNLEpeJsvxkALeO7_6QBmgRFM" />
  
   <style>
     body {
